--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
     <title>Wefqaci</title>
 
     <style>
@@ -18,19 +19,15 @@
 <body>
     <header>
         <img src="./logo.png">
-        <div class="nav-panel">
-            <nav>
-                <a href="#Main Page">Main Page</a>
-                <a href="#About me">About Me</a>
-                <a href="#Soon">Soon</a>
-                <a href="#Soon">Soon</a>
-                <a href="#Soon">Soon</a>
-                <a href="#Soon">Soon</a>
-            </nav>
-        </div>
+        <nav>
+            <a href="#Main Page">Main Page</a>
+            <a href="#About me">About Me</a>
+            <a href="#Soon">Soon</a>
+            <a href="#Soon">Soon</a>
+            <a href="#Soon">Soon</a>
+            <a href="#Soon">Soon</a>
+        </nav>
     </header>
-
-    <hr>
 
     <section class="top-section">
         <article>
@@ -68,16 +65,71 @@
         </div>
     </section>
 
-    
+
     <section class="services">
-       <h2>Services</h2>
-       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa quo nobis facilis! Deserunt asperiores libero cumque maiores accusamus exercitationem commodi consequatur dolorum quod repellendus, aliquid nam minima magni tenetur hic?</p>
-    <div class="services-box">
-                <a href="#Soon">soon soon</a>
-                <a href="#Soon">soon soon</a>
-                <a href="#Soon">soon soon</a>
-                <a href="#Soon">soon soon</a>
-    </div>
+        <h2>Services</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa quo nobis facilis! Deserunt asperiores libero
+            cumque maiores accusamus exercitationem commodi consequatur dolorum quod repellendus, aliquid nam minima
+            magni tenetur hic?</p>
+
+        <div class="services-box">
+
+            <div class="services-smallbox">
+                <a href="#Soon"><span class="lnr lnr-paperclip"></span>
+                        <h3>Something</h3>
+                        <p>There is going to be something I hope. Maybe nothing I don't know. I'm just trying to
+                            understand
+                            how it works and what I can do.</p>
+                    </a>
+            </div>
+
+            <div class="services-smallbox">
+                <a href="#Soon"><span class="lnr lnr-paperclip"></span>
+                        <h3>Something</h3>
+                        <p>There is going to be something I hope. Maybe nothing I don't know. I'm just trying to
+                            understand
+                            how it works and what I can do.</p>
+                    </a>
+            </div>
+
+            <div class="services-smallbox">
+                <a href="#Soon"><span class="lnr lnr-paperclip"></span>
+                        <h3>Something</h3>
+                        <p>There is going to be something I hope. Maybe nothing I don't know. I'm just trying to
+                            understand
+                            how it works and what I can do.</p>
+                    </a>
+            </div>
+
+            <div class="services-smallbox">
+                <a href="#Soon"><span class="lnr lnr-paperclip"></span>
+                        <h3>Something</h3>
+                        <p>There is going to be something I hope. Maybe nothing I don't know. I'm just trying to
+                            understand
+                            how it works and what I can do.</p>
+                    </a>
+            </div>
+
+            <div class="services-smallbox">
+                <a href="#Soon"><span class="lnr lnr-paperclip"></span>
+                        <h3>Something</h3>
+                        <p>There is going to be something I hope. Maybe nothing I don't know. I'm just trying to
+                            understand
+                            how it works and what I can do.</p>
+                    </a>
+            </div>
+
+            <div class="services-smallbox">
+                <a href="#Soon"><span class="lnr lnr-paperclip"></span>
+                        <h3>Something</h3>
+                        <p>There is going to be something I hope. Maybe nothing I don't know. I'm just trying to
+                            understand
+                            how it works and what I can do.</p>
+                    </a>
+            </div>
+
+          
+        </div>
     </section>
 </body>
 
