--- a/index.html
+++ b/index.html
@@ -1,136 +1,176 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap" rel="stylesheet" />
+
+    <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css" />
+    <link rel="stylesheet" href="global.css" />
+
     <title>Wefqaci</title>
+  </head>
 
-    <style>
-
-    </style>
-</head>
-
-<body>
+  <body>
     <header>
-        <img src="./logo.png">
-        <nav>
-            <a href="#Main Page">Main Page</a>
-            <a href="#About me">About Me</a>
-            <a href="#Soon">Soon</a>
-            <a href="#Soon">Soon</a>
-            <a href="#Soon">Soon</a>
-            <a href="#Soon">Soon</a>
-        </nav>
+      <img src="./assets/logo.png" />
+
+      <nav>
+        <a href="#Main Page">Main Page</a>
+
+        <a href="#About me">About Me</a>
+
+        <a href="#Soon">Soon</a>
+
+        <a href="#Soon">Soon</a>
+
+        <a href="#Soon">Soon</a>
+
+        <a href="#Soon">Soon</a>
+      </nav>
     </header>
 
     <section class="top-section">
-        <article>
-            <h1>My First WebSite</h1>
-            <p>I'm just learning</p>
-            <div class="flexssilki">
-                <a href="#Soon">soon soon</a>
-                <a href="#Soon">soon soon</a>
-            </div>
-        </article>
+      <h1>My First WebSite</h1>
+
+      <p>I'm just learning</p>
+
+      <div class="flexssilki">
+        <a href="#Soon">soon soon</a>
+
+        <a href="#Soon">soon soon</a>
+      </div>
     </section>
 
     <section class="someinfo">
-        <h2>Some info</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam tenetur sed earum voluptates dolore
-            recusandae animi qui voluptatem rerum ipsam eligendi totam quas eius rem, repellat nemo, quibusdam, harum
-            nam.</p>
+      <h2>Some info</h2>
+
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam tenetur sed earum voluptates dolore
+        recusandae animi qui voluptatem rerum ipsam eligendi totam quas eius rem, repellat nemo, quibusdam,
+        harum nam.
+      </p>
     </section>
 
     <section class="info">
-        <div class="info-item">
-            <img src="info_icon.png">
-            <h2>About me</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, commodi? Corrupti unde nisi iste deserunt
-                cumque blanditiis excepturi, ex, soluta, eius vitae labore! Unde sequi dicta non consequuntur, modi sit!
-            </p>
-        </div>
-        <div class="info-item">
-            <img src="contacts_icon.png">
-            <h2>My Contacts</h2>
-            <ul>
-                <li>Phone number: <a href="tel:+79110000000">+79110000000</a></li>
-                <li>E-mail: <a href="mailto:biba@gmail.com">biba@gmail.com</a></li>
-            </ul>
-        </div>
-    </section>
+      <div class="info-item">
+        <img src="info_icon.png" />
 
+        <h2>About me</h2>
+
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, commodi? Corrupti unde nisi iste
+          deserunt cumque blanditiis excepturi, ex, soluta, eius vitae labore! Unde sequi dicta non
+          consequuntur, modi sit!
+        </p>
+      </div>
+
+      <div class="info-item">
+        <!-- implement <figure> ? -->
+        <img src="contacts_icon.png" />
+
+        <h2>My Contacts</h2>
+
+        <ul>
+          <li>Phone number: <a href="tel:+79110000000">+79110000000</a></li>
+
+          <li>E-mail: <a href="mailto:biba@gmail.com">biba@gmail.com</a></li>
+        </ul>
+      </div>
+    </section>
 
     <section class="services">
-        <h2>Services</h2>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa quo nobis facilis! Deserunt asperiores libero
-            cumque maiores accusamus exercitationem commodi consequatur dolorum quod repellendus, aliquid nam minima
-            magni tenetur hic?</p>
+      <h2>Services</h2>
 
-        <div class="services-box">
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa quo nobis facilis! Deserunt asperiores
+        libero cumque maiores accusamus exercitationem commodi consequatur dolorum quod repellendus, aliquid
+        nam minima magni tenetur hic?
+      </p>
 
-            <div class="services-smallbox">
-                <a href="#Soon"><span class="lnr lnr-paperclip"></span>
-                        <h3>Something</h3>
-                        <p>There is going to be something I hope. Maybe nothing I don't know. I'm just trying to
-                            understand
-                            how it works and what I can do.</p>
-                    </a>
-            </div>
+      <ul class="services-list">
+        <li>
+          <span class="lnr lnr-paperclip"></span>
 
-            <div class="services-smallbox">
-                <a href="#Soon"><span class="lnr lnr-paperclip"></span>
-                        <h3>Something</h3>
-                        <p>There is going to be something I hope. Maybe nothing I don't know. I'm just trying to
-                            understand
-                            how it works and what I can do.</p>
-                    </a>
-            </div>
+          <h3>Something</h3>
 
-            <div class="services-smallbox">
-                <a href="#Soon"><span class="lnr lnr-paperclip"></span>
-                        <h3>Something</h3>
-                        <p>There is going to be something I hope. Maybe nothing I don't know. I'm just trying to
-                            understand
-                            how it works and what I can do.</p>
-                    </a>
-            </div>
+          <p>
+            There is going to be something I hope. Maybe nothing I don't know. I'm just trying to understand
+            how it works and what I can do.
+          </p>
 
-            <div class="services-smallbox">
-                <a href="#Soon"><span class="lnr lnr-paperclip"></span>
-                        <h3>Something</h3>
-                        <p>There is going to be something I hope. Maybe nothing I don't know. I'm just trying to
-                            understand
-                            how it works and what I can do.</p>
-                    </a>
-            </div>
+          <a href="#"> Read more -> </a>
+        </li>
 
-            <div class="services-smallbox">
-                <a href="#Soon"><span class="lnr lnr-paperclip"></span>
-                        <h3>Something</h3>
-                        <p>There is going to be something I hope. Maybe nothing I don't know. I'm just trying to
-                            understand
-                            how it works and what I can do.</p>
-                    </a>
-            </div>
+        <li>
+          <span class="lnr lnr-paperclip"></span>
 
-            <div class="services-smallbox">
-                <a href="#Soon"><span class="lnr lnr-paperclip"></span>
-                        <h3>Something</h3>
-                        <p>There is going to be something I hope. Maybe nothing I don't know. I'm just trying to
-                            understand
-                            how it works and what I can do.</p>
-                    </a>
-            </div>
+          <h3>Something</h3>
 
-          
-        </div>
+          <p>
+            There is going to be something I hope. Maybe nothing I don't know. I'm just trying to understand
+            how it works and what I can do.
+          </p>
+
+          <a href="#"> Read more -> </a>
+        </li>
+
+        <li>
+          <span class="lnr lnr-paperclip"></span>
+
+          <h3>Something</h3>
+
+          <p>
+            There is going to be something I hope. Maybe nothing I don't know. I'm just trying to understand
+            how it works and what I can do.
+          </p>
+
+          <a href="#"> Read more -> </a>
+        </li>
+
+        <li>
+          <span class="lnr lnr-paperclip"></span>
+
+          <h3>Something</h3>
+
+          <p>
+            There is going to be something I hope. Maybe nothing I don't know. I'm just trying to understand
+            how it works and what I can do.
+          </p>
+
+          <a href="#"> Read more -> </a>
+        </li>
+
+        <li>
+          <span class="lnr lnr-paperclip"></span>
+
+          <h3>Something</h3>
+
+          <p>
+            There is going to be something I hope. Maybe nothing I don't know. I'm just trying to understand
+            how it works and what I can do.
+          </p>
+
+          <a href="#"> Read more -> </a>
+        </li>
+
+        <li>
+          <span class="lnr lnr-paperclip"></span>
+
+          <h3>Something</h3>
+
+          <p>
+            There is going to be something I hope. Maybe nothing I don't know. I'm just trying to understand
+            how it works and what I can do.
+          </p>
+
+          <a href="#"> Read more -> </a>
+        </li>
+      </ul>
     </section>
-</body>
-
+  </body>
 </html>
